# engram

./: .env.example  .gitignore  CLAUDE.md  ENGRAMDESIGN.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 658018bb07cc_initial_schema.py  922ac4907c29_add_relationships_locations_life_events_.py  a1b2c3d4e5f6_add_interaction_context_to_memories.py  bd5742f77030_initial_schema.py  e2873e9cf9fb_add_temporal_fields_to_identity.py  ed7062c8c3ef_initial_schema.py
scripts/: import_facebook_signals.py  import_free_signals.py  ingest_exports.py  ingest_facebook.py
src/engram/: __init__.py  cli.py  config.py  db.py  encryption.py  main.py
tests/: conftest.py  test_cli.py
tests/test_api/: test_config.py  test_engram.py  test_identity.py  test_ingest.py  test_ingest_enhanced.py  test_memories.py  test_memories_enhanced.py  test_people.py  test_photos.py  test_tokens.py
tests/test_identity/: test_repository.py  test_service.py  test_temporal.py
tests/test_ingestion/: test_facebook_parser.py  test_file_parser.py  test_gmail_parser.py  test_instagram_parser.py  test_reddit_parser.py
tests/test_integration/: __init__.py  test_evolution_flow.py  test_full_pipeline.py  test_identity_flow.py  test_privacy_flow.py
tests/test_llm/: test_rag.py
tests/test_mcp/: test_server.py
tests/test_memory/: test_repository.py  test_service.py
tests/test_models/: test_models.py
tests/test_photos/: test_repository.py  test_service.py
web/: CLAUDE.md  package-lock.json  package.json  postcss.config.mjs
(+95 files in other folders)
